      the test-case (LP: #237372)
  * python/apt_instmodule.cc:
    - do not change working dir in debExtractArchive() (LP: #184093)
  * apt/cache.py:
    - support "in" in apt.Cache() (LP: #251587)
  * python/progress.cc:
    - when pulse() does not return a boolean assume "true"
      (thanks to Martin Pitt for telling me about the problem)
  * aptsources/__init__.py, aptsources/distinfo.py:
    - run apt_pkg.init() when aptsources gets imported and not
      the distinfo function

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 30 Jul 2008 10:24:30 +0200

python-apt (0.7.7.1) unstable; urgency=low

  * data/templates/Debian.info.in:
    - add 'lenny' template info (closes: #476364)
  * aptsources/distinfo.py:
    - fix template matching for arch specific code (LP: #244093)

 -- Michael Vogt <mvo@debian.org>  Fri, 25 Jul 2008 18:13:53 +0200

python-apt (0.7.7) unstable; urgency=low

  [ Emanuele Rocca ]
  * data/templates/Debian.info.in:
    - s/MatchUri/MatchURI/. Thanks, Gustavo Noronha Silva (closes: #487673)
  * python/cache.cc:
    - Throw an exception rather than segfaulting when GetCache() is called
      before InitSystem() (closes: #369147)
  * doc/examples/config.py:
    - Fix config.py --help (closes: #257007)

  [ Michael Vogt ]
  * python/apt_pkgmodule.cc:
    - fix bug in hashsum calculation when the original string
      contains \0 charackters (thanks to Celso Providelo and 
      Ryan Hass for the test-case) LP: #243630
  * tests/test_hashsums.py:
    - add tests for the hashsum code
  * apt/package.py:
    - add "isAutoRemovable()" method
  * python/pkgsrcrecords.cc:
    - add "Record" attribute to the PkgSrcRecord to access the
      full source record
  * debian/rules:
    - remove the arch-build target, we have bzr-builddeb now

 -- Michael Vogt <mvo@debian.org>  Tue, 22 Jul 2008 10:16:03 +0200

python-apt (0.7.6) unstable; urgency=low

  * apt/cache.py:
    - add "memonly" option to apt.Cache() to force python-apt to