@@ -9,3 +9,5 @@ deb http://ftp.debian.org/debian sid main
 deb http://ubuntu.cs.uaf.edu/ubuntu/ hardy main
 deb http://ubuntu.cs.uaf.edu/ubuntu/ hardy-backports main
 deb http://archive.ubuntu.com/ubuntu/ intrepid main
+deb cdrom:[Ubuntu 8.10 _Intrepid Ibex_ - Alpha]/ intrepid main
+deb cdrom:[Ubuntu 8.04 _Hardy Heron_] hardy main
