@@ -12,9 +12,12 @@ python-apt (0.7.7.2) UNRELEASED; urgency=low
   * python/progress.cc:
     - when pulse() does not return a boolean assume "true"
       (thanks to Martin Pitt for telling me about the problem)
+  * python/apt_pkgmodule.cc:
+    add "SelState{Unknown,Install,Hold,DeInstall,Purge}" constants
   * aptsources/__init__.py, aptsources/distinfo.py:
     - run apt_pkg.init() when aptsources gets imported and not
       the distinfo function
+    - fix detection of cdrom sources and add test for it
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 30 Jul 2008 10:24:30 +0200
 
